--- a/app/style/detail.scss
+++ b/app/style/detail.scss
@@ -32,7 +32,7 @@
       width: 100%;
       height: 280px;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-evenly;
       margin-bottom: 20px;
 
       .img{
