--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -2,6 +2,15 @@
   // width: 100%;
   // height: auto;
   
+  h2{
+    text-align: center;
+    font-size: 2rem;
+    letter-spacing: 0.5px;
+    font-weight: 600;
+    padding-top: 10px;
+    color: #b2b2b2;
+  }
+  
   img{
     width: 100%;
     height: 250px;
