--- a/app/style/post.scss
+++ b/app/style/post.scss
@@ -52,15 +52,17 @@ input, textarea{
 }
 
 .item{
-  width: auto;
+  width: 100%;
   height: 300px;
   display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .box{
   flex: none;
   width: 23%;
-  margin: auto;
+  // margin: auto;
   height: 180px;
   border: 1px solid #ccc;
   border-radius: 7px;
